Hook up "Bookmark this link" context menu item (bug 154856).  r=pinkerton.